dof.css
body {
    font-family: Helvetica, sans-serif;
    font-weight: lighter;
    font-size: 100%;
    width: 480px;
}

a:link {
    color: #aaaaff;
}

a:visited {
    color: #ffaaff;
}

input:focus { 
    background-color: #333333;
}

select:focus { 
    background-color: #333333;
}

div.section {
    max-width: 480px;
    min-width: 360px;
    border-style: solid;
    border-width: 2px;
    border-color: Black;
    border-radius: 6px;
    padding: 6px;
    background: #666;
    color: White;
}

#results {
    text-align: center;
    font-size: 2em;
    position: relative;
}

#touch {
    height: 100px;
    text-align: center;
    font-size: 2em;
    position: relative;
}

.touch-pad {
    position: absolute;
    top: 0%;
    height: 100%
}

#touch-left {
    left: 0px;
    width: 20%;
}

#touch-left-2 {
    left: 20%;
    width: 10%;
}

#touch-left-3 {
    left: 30%;
    width: 10%;
}

#touch-center {
    left: 40%;
    width: 20%;
    background: #555;
}

#touch-right-3 {
    left: 60%;
    width: 10%;
}

#touch-right-2 {
    left: 70%;
    width: 10%;
}

#touch-right {
    left: 80%;
    width: 20%;
}

.vertical-center {
    position: relative;
    top: 25%;
    transform: translateY(-50%);
}

#dof_range {
    font-size: 1em;
}

#params {
    text-align: center;
    font-size: 1.5em;
    position: relative;
}

.topic {
    padding: 6px;
    border-style: dashed;
    border-width: 1px;
    border-color: LightGray;
    border-radius: 6px;
    margin-bottom: 6px;
}

.topic-label {
    font-size: 1.25em;
}

.topic-content {
    display: none;
    font-size: 1em;
    margin-left: 60px;
}

.spacer {
    height: 6px;
}

.dofinput {
    font-size: 1em;
    background: Gray;
    color: White;
}

.dofinput[name=distance] {
    text-align: right;
}

.dofinput[name=focal_length] {
    text-align: right;
}

.addinput {
    font-size: 0.8em;
    background: Gray;
    color: White;
}

select[name=format] {
    font-size: 0.8em;
}

#hf_label {
    display: inline-block;
}

#hf_result {
    display: inline-block;
}

#add-format {
    display: none;
    font-size: 0.8em;
}

select[name=denominator] {
    font-size: 0.9em;
    background: Gray;
    color: White;
}

#coc {
    font-size: 0.67em;
}

.param-section {
}

#help {
    display: none;
}

.btn {
    position: absolute;
    font-size: 0.8em;
    border-style: none;
    border-color: LightGray;
    border-width: 1px;
    border-radius: 12px;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 6px;
    padding-right: 6px;
}

#help-btn {
    right: 10px;
    bottom: 10px;
}

#touch-btn {
    left: 10px;
    bottom: 10px;
}

.noselect, .topic-label {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

